    - parser now supports extended ASCII character set
      (up to ASCII code 255, i.e. includes now umlauts and accents)
    - filename arguments in LSCP commands now allow to use escape
      sequences, that is directly literal as one of: \', \", \\, \n, \r,
      \f, \t, \v, or as octal ASCII code value like \132, or as hex ASCII
      code value like \xf2) (fixes bug #24)
    - returns verbose syntax errors (line and column where syntax error
      occured, the unexpected character and the actually expected, possible
      character(s), the latter only if less than 5 possibilities)
    - made sure that LSCP syntax is not affected by gigedit locale
      settings
    - bugfix regarding strings parameter lists: all comma separated lists
      of strings were treated as being one string containing commas
      (fixes #57)

  * Bug fixes:
    - fixed crash occurring on certain LSCP scripts (Bug 39)
    - another thread safety fix for lscp "load engine" and "set
      channel audio output device"
    - fixed a crash which occurs when reassigning the same engine
      on a sampler channel with connected MIDI device
    - fixed a crash which occurs when changing the number of ports of a MIDI
      device connected to a sampler channel to number less then or equal
      to the index of the port to which the sampler channel is connected.
    - The previous bindings were not been disconnected when altering
      the ALSA_SEQ_BINDINGS parameter. Introduced a NONE keyword for
      unsubscribing from all bindings (e.g. ALSA_SEQ_BINDINGS=NONE).
    - The active stream/voice count statistic was incorrect.
    - notification events were not been sent for some sampler
      channel changes
    - added default min and max values to restrict the number of allowed
      audio output channels and MIDI input ports
    - the connection to the PCM interface is now closed when destroying
      an audio output device
    - files with slash in their path or filename could not be loaded